--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,18 @@ services:
       - "4173:4173"
     restart: unless-stopped
 
+  nginx:
+    image: nginx:1.27-alpine
+    depends_on:
+      - frontend
+      - backend
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - certbot-challenges:/var/www/certbot
+    restart: unless-stopped
+
   bot:
     build:
       context: ./max_bot
@@ -52,3 +64,4 @@ services:
 
 volumes:
   backend_data:
+  certbot-challenges:
